# 06/10/2021
- Announcement: I am going on summer vacation so there will be no commits for a few weeks!
# 06/06/2021
- Added a favicon
- An overview with all personal projects will soon be found under the "Projects" tab
- Minot additions
- Fixed language errors
- The download form is getting a redesign
- Website exited prototype stage and is now in alpha stage
# 06/05/2021
- Replaced some placeholders
- Added a footer
- Fixed some animations
- Fixed stuttery transitions on page load
- Navigation bar now fixed
- Fixed typos and language errors
- Mobile page indicator now shows below the navigation bar
- Mobile menu now scrolls back to the top of the page when pressed
- Other minor (design) fixes
# 06/04/2021
- Archived current website
- Created new repository for Website (same URL)
- Made new website responsive
- Added "privacy policy" :) (See "About")
- Added some placeholders that will be replaced soon