@@ -78,8 +78,22 @@
     <main id="resize_main">
         <h1>My personal projects</h1>
         <hr>
-        <ul class="project_header"><li><a href="https://github.com/JBNCK/">Project 1</a></li></ul>
-        <p>Desc</p>
+        
+        <ul class="project_header"><li><a href="https://github.com/JBNCK/CLINOTE">CLINOTE</a></li></ul>
+        <p>Command line based notes and task application written in C.</p>
+
+        <ul class="project_header"><li><a href="https://github.com/JBNCK/Website">Website</a></li></ul>
+        <p>This is the GitHub page for the Website you're on right now. It is completely open source and although I doubt there will be any contributors I will still keep the website open for anyone to see and modify.</p>
+
+        <ul class="project_header"><li><a href="https://github.com/JBNCK/FP3_debloater">Fairphone 3 debloater</a></li></ul>
+        <p>A simple shell based debloater for the Fairphone 3 and Fairphone 3 plus. It removes and replaces many Google apps and other unnecessary bloat and telemetry/spyware.</p>
+
+        <ul class="project_header"><li><a href="https://github.com/JBNCK/StupidAndroidFeatureRemover">SAFR - Stupid Anroid Feature Remover</a></li></ul>
+        <p>It basically does the same thing as the Fairphone 3 debloater but it has some advantages like the ability to customize what you want to remove. It also works on almost any phone.</p>
+
+        <ul class="project_header"><li><a href="https://github.com/JBNCK/script_playground">Script playground</a></li></ul>
+        <p>My favorite thing that I do on every UNIX like operating system is playing around with shell scripts. Some of them are useful, some of them are fun and some of them are, well, literal garbageTM.</p>
+
     </main>
   </body>
 </html>
